build: Remove classpath conf from bll tests
The additional classpath and endorsed jars in BLL's tests are
remnants from oVirt 3.1, and are no longer needed.
At best, they're redundant, and at worst they break the build with
the early access Java 9.

Change-Id: I3bc919d2d04b183c94785937c53434262c5ab56e
Signed-off-by: Allon Mureinik <amureini@redhat.com>