@@ -273,10 +273,6 @@
            <ENGINE_VARS>${basedir}/src/test/resources/engine.conf</ENGINE_VARS>
          </environmentVariables>
 
-          <argLine>-Dengine.ejb3.connector.port=${engine.ejb3.connector.port} -Dengine.bisocket.connector.port=${engine.bisocket.connector.port} -Dsun.lang.ClassLoader.allowArraySyntax=true -Djava.endorsed.dirs="${settings.localRepository}/org/codehaus/woodstox/wstx-asl/3.2.9/"</argLine>
-          <additionalClasspathElements>
-            <additionalClasspathElement>${basedir}/src/test/java</additionalClasspathElement>
-          </additionalClasspathElements>
           <excludes>
 	    <exclude>**/TestHelper*.java</exclude>
           </excludes>
